--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
     </section>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <!-- <script src="js/axios.js"></script> -->
+    <script src="js/axios.js"></script>
     <script src="js/main.js"></script>
 </body>
 
