--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <!-- Nav tabs -->
             <ul class="nav nav-tabs text-center" role="tablist">
-                <li class="nav-item">
+                <li class="nav-box">
                     <input type="text" class="form-control form-control" onkeyup="search()"
                         placeholder="Digite um repositorio GitHub">
                 </li>
@@ -36,7 +36,7 @@
                         <div class="news-bord m-2 text-left d-flex">
                             <img class="p-2"
                                 src="https://avatars1.githubusercontent.com/u/62614331?s=460&u=e9aa99fd52f421775ce472ca665d8f089be5b3ad&v=4" />
-                            <div class="text-left p-2 pr-3 conteudo">
+                            <div class="text-left p-2 pr-3 conteudo text-break">
                                 <div>
                                     <h4><strong>Titulo</strong></h4>
                                 </div>
