--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <!-- Nav tabs -->
             <ul class="nav nav-tabs text-center" role="tablist">
                 <li class="nav-box">
-                    <input type="text" class="form-control form-control" onkeyup="search()" placeholder="Digite um Usuario GitHub">
+                    <input type="text" class="form-control form-control" onkeyup="search()"
+                        placeholder="Digite um Usuario GitHub">
                 </li>
                 <li class="nav-item active"><strong>Repositorios</strong></li>
             </ul>
@@ -33,7 +34,8 @@
                     <div class="py-3"><strong>Em manuntenção... </strong></div>
                     <a href="#" target="_black">
                         <div class="news-bord m-2 text-left d-flex">
-                            <img class="p-2" src="https://avatars1.githubusercontent.com/u/62614331?s=460&u=e9aa99fd52f421775ce472ca665d8f089be5b3ad&v=4" />
+                            <img class="p-2"
+                                src="https://avatars1.githubusercontent.com/u/62614331?s=460&u=e9aa99fd52f421775ce472ca665d8f089be5b3ad&v=4" />
                             <div class="text-left p-2 pr-3 conteudo text-break">
                                 <div>
                                     <h4><strong>Titulo</strong></h4>
@@ -45,6 +47,12 @@
                         </div>
                     </a>
                 </div>
+            </div>
+            <div class="d-flex justify-content-center mt-3">
+                <span class="align-middle">Visualizações: </span>
+                <img src='https://megacontador.com.br/img-cbfOH8EPkaN2uybb-7.gif'>
+                <!-- Teste -->
+                <!-- <img src='https://megacontador.com.br/img-W47h9wzYMBQks9VA-7.gif'> -->
             </div>
         </div>
     </section>
