--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul class="nav nav-tabs text-center" role="tablist">
                 <li class="nav-box">
                     <input type="text" class="form-control form-control" onkeyup="search()"
-                        placeholder="Digite um Usuario GitHub">
+                        placeholder="Digite um Usuário GitHub">
                 </li>
                 <li class="nav-item active"><strong>Repositorios</strong></li>
             </ul>
