--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section id="section-contact">
+    <section id="section">
         <div class="container">
             <!-- Nav tabs -->
             <ul class="nav nav-tabs text-center" role="tablist">
